# androidvk

./: .gitignore  build.gradle  local.properties  settings.gradle
AccelerometerCube/: CMakeLists.txt
AccelerometerCube/src/main/cpp/: VulkanMain.cpp
HeartBeatThreading/: CMakeLists.txt
HeartBeatThreading/src/main/cpp/: ModelLoader.h  VulkanMain.cpp
assimp/: build.gradle
assimp/src/main/: AndroidManifest.xml
assimp/src/main/cpp/: CMakeLists.txt  jniactivity.c
assimp/src/main/res/layout/: activity_hello_jni.xml
doc/: Vulkan Tutorial 01 开发环境搭建之Windows.md  Vulkan Tutorial 02 编写Vulkan应用程序框架原型.md  Vulkan Tutorial 03 理解Instance.md  Vulkan Tutorial 04 理解Validation layers.md  Vulkan Tutorial 05 物理设备与队列簇.md  Vulkan Tutorial 06 逻辑设备与队列.md  Vulkan Tutorial 07 Window surface.md  Vulkan Tutorial 08 交换链.md  Vulkan Tutorial 09 图像与视图.md  Vulkan Tutorial 10 图形管线.md  Vulkan Tutorial 11 Shader modules.md  Vulkan Tutorial 12 Fixed functions.md  Vulkan Tutorial 13 Render passes.md  Vulkan Tutorial 14 Integration pipeline.md  Vulkan Tutorial 15 Framebuffers.md  Vulkan Tutorial 16 Command buffers.md  Vulkan Tutorial 17 Rendering and presentation.md  Vulkan Tutorial 18 重构交换链.md  Vulkan Tutorial 19 Vertex input description.md  Vulkan Tutorial 20 Vertex buffer creation.md  Vulkan Tutorial 21 Staging buffer.md  Vulkan Tutorial 22 Index buffer.md  Vulkan Tutorial 23 Descriptor layout and buffer.md  Vulkan Tutorial 24 Descriptor pool and sets.md  Vulkan Tutorial 25 Images.md  Vulkan Tutorial 26 Image view and sampler.md  Vulkan Tutorial 27 Combined image sampler.md  Vulkan Tutorial 28 Depth buffering.md  Vulkan Tutorial 29 Loading models.md  Vulkan-高性能渲染.md  VulkanTutorial.md  Vulkan_管理资源状态.md
doc/src/: 17.cpp
dolphin/: build.gradle
dolphin/cpp/Source/Android/jni/: CMakeLists.txt
dolphin/src/main/: AndroidManifest.xml
dolphin/src/main/assets/shaders/: triangle.vert
dolphin/src/main/cpp/: CMakeLists.txt
dolphin/src/main/shaders/: triangle.vert
gradle/wrapper/: gradle-wrapper.properties
shaderc/: build.gradle
shaderc/src/main/cpp/: Android.mk  hellojni.c
vk_android_java/: build.gradle
vk_android_java/src/main/: AndroidManifest.xml
vk_android_java/src/main/cpp/: CMakeLists.txt  TriangleVK.hpp  mylog.h  vulkan_tutorial.cpp  vulkan_tutorial.h  vulkan_tutorial_jni.cpp  vulkan_tutorial_jni.h
vk_android_java/src/main/cpp/utils/: TutoWindowManager.cpp
vk_android_java/src/main/res/layout/: activity_main.xml
vkdepth/: build.gradle
vkdepth/src/main/: AndroidManifest.xml
vkdepth/src/main/cpp/: mylog.h
vkdepth/src/main/cpp/vk/: vulkan_buffer.h  vulkan_device.h  vulkan_texture.cpp  vulkan_utils.cpp  vulkan_utils.h  vulkan_utils_jni.cpp  vulkan_wrapper.cpp
vkdrawcube/: build.gradle
vkdrawcube/src/main/: AndroidManifest.xml
vkdrawcube/src/main/cpp/: CMakeLists.txt
vkdrawcube/src/main/cpp/shaderc/libshaderc/include/shaderc/: shaderc.hpp
vkdrawcube/src/main/cpp/utils/: TutorialShaders.cpp
vkdrawcube/src/main/cpp/vkutils/: CMakeLists.txt  util.cpp  util.hpp  util_init.cpp
vkdrawcube/src/main/res/values/: strings.xml
vkmultithread/: build.gradle
vkmultithread/src/main/: AndroidManifest.xml
vkmultithread/src/main/cpp/: CMakeLists.txt
vkmultithread/src/main/cpp/gli/: format.hpp  sampler2d.hpp  sampler_cube_array.hpp  type.hpp
vkmultithread/src/main/cpp/src/: VkMultiThreading.cpp  VkMultiThreading.h  VulkanDebug.h  VulkanFrameBuffer.hpp  VulkanTextOverlay.cpp  VulkanTextOverlay.hpp  VulkanTools.h  (+3 more)
vkpipeline/: build.gradle
vkpipeline/src/main/: AndroidManifest.xml
vkpipeline/src/main/cpp/: CMakeLists.txt  android_native_app_glue.c  jniactivity.c  my_log.h  mylog.h
vkpipeline/src/main/cpp/gli/: gl.hpp  sampler1d.hpp
vkpipeline/src/main/cpp/src/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanHeightmap.hpp  VulkanInitializers.hpp  VulkanMain.cpp  VulkanMain.h  VulkanModel.cpp  VulkanModel.hpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanTextOverlay.cpp  VulkanTextOverlay.hpp  VulkanTexture.cpp  VulkanTexture.hpp  VulkanTools.cpp  VulkanTools.h  vulkanandroid.h
vkradial/: build.gradle
vkradial/src/main/: AndroidManifest.xml
vkradial/src/main/cpp/: CMakeLists.txt
vksample/: build.gradle
vksample/src/main/cpp/: CMakeLists.txt  instance.cpp  util.cpp  util_init.cpp  util_init.hpp  vulkan_wrapper.cpp
vksample_1/src/main/: AndroidManifest.xml
vksample_1/src/main/cpp/: CMakeLists.txt  android_native_app_glue.h  my_log.h  util.cpp  util.hpp  vulkan_wrapper.h
vktest/: build.gradle
vktest/src/main/: AndroidManifest.xml
vktest/src/main/cpp/: CMakeLists.txt  FirstWindow.cpp  FirstWindowVK.cpp  LoadVK.cpp  PrebuildLayerVK.cpp  TraceableLayer.cpp  TraceableLayerVK.cpp  TriangleMain.cpp  TriangleVK.cpp  TriangleVK.hpp  Tutorial.cpp  android_native_app_glue.c  jniactivity.c
vktest/src/main/cpp/utils/: TutoWindowManager.hpp  TutorialShaders.hpp  TutorialTextures.cpp  TutorialTextures.hpp  TutorialUtils.cpp
vktutorials/: build.gradle
vktutorials/src/main/: AndroidManifest.xml
vktutorials/src/main/cpp/: CMakeLists.txt  PrebuildLayer.cpp  TraceableLayerVK.hpp  TutorialVK.cpp  jniactivity.c
vktutorials/src/main/cpp/drawingt_riangle/: DrawingTriangle.cpp  DrawingTriangle.h  DrawingTriangleMain.cpp
vktutorials/src/main/cpp/tutorial03/: TriangleApplication.cpp  TriangleApplication.h  TutorialMain.cpp
vktutorials/src/main/cpp/tutorial11/: TriangleApplication.cpp
vktutorials/src/main/cpp/tutorial28/: DepthBuffering.cpp  DepthBuffering.h  TutorialMain.cpp
vktutorials/src/main/cpp/tutorial29/: TriangleApplication.h
vktutorials/src/main/shaders/: shader_textures.frag
vkview/: build.gradle
vkview/src/main/: AndroidManifest.xml
vkview/src/main/cpp/: CMakeLists.txt
vkwindow/: build.gradle
vkwindow/src/main/: AndroidManifest.xml
vkwindow/src/main/cpp/: TriangleMain.cpp  TutorialVK.h
vulkan/: build.gradle
vulkan/src/main/: AndroidManifest.xml
vulkan/src/main/cpp/: CMakeLists.txt  jniactivity.c
(+266 files in other folders)
